# grainTempBoard

./: .gitmodules  CMakeLists.txt  README.md  boardInit.cpp  boardInit.h  mcuInit.cpp  mcuInit.h
